// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Table /> should display a default view 1`] = `
<div>
  <table
    class="table view-table"
  >
    <thead>
      <tr>
        <td
          class="cell-wrapper cell-short clickable d-none d-md-table-cell"
        >
          <input
            readonly=""
            type="checkbox"
          />
        </td>
        <div>
          HeaderCell
        </div>
        <div>
          HeaderCell
        </div>
        <div>
          HeaderCell
        </div>
      </tr>
    </thead>
    <tbody>
      <div>
        Row:
        <div>
          selectable: 
          true
        </div>
        <div>
          isSelected: 
          false
        </div>
      </div>
    </tbody>
  </table>
</div>
`;

exports[`<Table /> should display a default view with no items 1`] = `
<div>
  <div>
    BlankState
    <div />
  </div>
</div>
`;

exports[`<Table /> should display a default view with option selectable set to false 1`] = `
<div>
  <table
    class="table view-table"
  >
    <thead>
      <tr>
        <div>
          HeaderCell
        </div>
        <div>
          HeaderCell
        </div>
        <div>
          HeaderCell
        </div>
      </tr>
    </thead>
    <tbody>
      <div>
        Row:
        <div>
          selectable: 
          false
        </div>
        <div>
          isSelected: 
          false
        </div>
      </div>
    </tbody>
  </table>
</div>
`;

exports[`<Table /> should display a modified view with no items, should reset the view and fetch first items  1`] = `
Array [
  Object {
    "configName": "ticket",
    "type": "RESET_VIEW",
  },
]
`;

exports[`<Table /> should display a view with no fields 1`] = `
<div>
  <table
    class="table view-table"
  >
    <thead>
      <tr>
        <td
          class="cell-wrapper cell-short clickable d-none d-md-table-cell"
        >
          <input
            readonly=""
            type="checkbox"
          />
        </td>
      </tr>
    </thead>
    <tbody>
      <div>
        Row:
        <div>
          selectable: 
          true
        </div>
        <div>
          isSelected: 
          false
        </div>
      </div>
    </tbody>
  </table>
</div>
`;

exports[`<Table /> should select all items on the current page of the active view when there is a click on the "select all" checkbox 1`] = `
Array [
  Object {
    "ids": Immutable.List [
      152,
    ],
    "type": "UPDATE_PAGE_SELECTION",
  },
]
`;
